--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="panel panel-primary">
                         <div class="panel-heading top-bar">
                             <div class="col-md-8 col-xs-8">
-                                <h3 class="panel-title"><span class="glyphicon glyphicon-comment"></span> Chat - Miguel</h3>
+                                <h3 class="panel-title"><span class="glyphicon glyphicon-comment"></span> Chat</h3>
                             </div>
                         </div>
                         <div class="panel-body msg_container_base">
